Правит ошибки в отображении fieldset

--- a/source/form.html
+++ b/source/form.html
@@ -54,7 +54,7 @@
       </p>
       <div class="form__fieldsets-container">
         <fieldset class="form__fieldset form__fieldset--no-title form__fieldset--customer-data">
-          <legend class="form__legend visually-hidden">Данные кота</legend>
+          <p class="visually-hidden">Данные кота</p>
           <label class="form__label" for="cat-name">
             ИМЯ:*
             <input class="form__input" type="text" id="cat-name" name="cat-name" placeholder="Барсик">
@@ -71,7 +71,7 @@
         </fieldset>
 
         <fieldset class="form__fieldset form__fieldset--no-title form__fieldset--program">
-          <legend class="form__legend visually-hidden">Необходимый результат</legend>
+          <p class="visually-hidden">Необходимый результат</p>
           <label class="form__label form__label--program">
             <input class="radio" type="radio" name="program" id="slim" value="slim" checked>
             Похудение
