--- a/source/index.html
+++ b/source/index.html
@@ -145,19 +145,20 @@
     <div class="wrapper wrapper--contacts">
       <section class="contacts">
         <h2 class="visually-hidden">Наши контакты</h2>
-        <div class="contacts__info-container">
+        <div class="contacts__info-and-map-container">
           <div class="contacts__info contacts__info--index">
             <p class="contacts__title">
               Приглашаем<br>
-              к сотрудничеству дилеров!</p>
+              к сотрудничеству дилеров!
+            </p>
             <address class="contacts__address">
               ул. Большая Конюшенная, д. 19/8
               <p class="contacts__empty-line"></p>
               Санкт-Петербург
             </address>
           </div>
+          <div class="contacts__map" id="map"></div>
         </div>
-        <div class="contacts__map" id="map"></div>
       </section>
     </div>
     <div class="wrapper wrapper--bottom">
