Добавляет декоративные линии которые тянутся на всю ширину окна для form.html

--- a/source/form.html
+++ b/source/form.html
@@ -87,7 +87,7 @@
         </fieldset>
       </div>
 
-      <fieldset class="form__fieldset form__fieldset--accent-title form__fieldset--contacts container container--form-tablet">
+      <fieldset class="form__fieldset form__fieldset--contacts container container--form-tablet">
         <legend class="form__legend form__legend--contacts">Контактные данные (владельца кота)</legend>
         <label class="form__label">
           E-mail:*
@@ -100,12 +100,12 @@
         </label>
       </fieldset>
 
-      <fieldset class="form__fieldset form__fieldset--accent-title form__fieldset--comment container container--form-tablet">
+      <fieldset class="form__fieldset form__fieldset--comment container container--form-tablet">
         <legend class="form__legend">Комментарий</legend>
         <textarea class="form__comment" id="comment" name="comment" rows="5" cols="33" placeholder="Расскажите обо всех повадках кота"></textarea>
       </fieldset>
 
-      <fieldset class="form__fieldset form__fieldset--accent-title form__fieldset--additionally container container--form-tablet">
+      <fieldset class="form__fieldset form__fieldset--additionally container container--form-tablet">
         <legend class="form__legend">Дополнительно</legend>
         <label class="form__label form__label--additionally">
           <input class="checkbox" type="checkbox" name="additionally" id="sweetener" value="sweetener" checked>
