Добавляет webp графику для контентных картинок.

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -55,6 +55,10 @@
           <a class="main-card__picture-link" href="#">
             <span class="visually-hidden">Перейти к карточке товара</span>
             <picture>
+              <source type="image/webp" media="(min-width: 1440px)" width="169" height="210" srcset="images/cards/chicken500-desktop@1x.webp 1x, images/cards/chicken500-desktop@2x.webp 2x">
+              <source type="image/webp" media="(min-width: 768px)" width="200" height="210" srcset="images/cards/chicken500-tablet@1x.webp 1x, images/cards/chicken500-tablet@2x.webp 2x">
+              <source type="image/webp" width="200" height="210" srcset="images/cards/chicken500-mobile@1x.webp 1x, images/cards/chicken500-mobile@2x.webp 2x">
+
               <source type="image/png" media="(min-width: 1440px)" width="169" height="210" srcset="images/cards/chicken500-desktop@1x.png 1x, images/cards/chicken500-desktop@2x.png 2x">
               <source type="image/png" media="(min-width: 768px)" width="200" height="210" srcset="images/cards/chicken500-tablet@1x.png 1x, images/cards/chicken500-tablet@2x.png 2x">
               <img class="main-card__img" width="140" height="107" src="images/cards/chicken500-mobile@1x.png" srcset="images/cards/chicken500-mobile@2x.png 2x" alt="">
@@ -84,6 +88,10 @@
           <a class="main-card__picture-link" href="#">
             <span class="visually-hidden">Перейти к карточке товара</span>
             <picture>
+              <source type="image/webp" media="(min-width: 1440px)" width="169" height="210" srcset="images/cards/chicken1000-desktop@1x.webp 1x, images/cards/chicken1000-desktop@2x.webp 2x">
+              <source type="image/webp" media="(min-width: 768px)" width="200" height="210" srcset="images/cards/chicken1000-tablet@1x.webp 1x, images/cards/chicken1000-tablet@2x.webp 2x">
+              <source type="image/webp" width="140" height="107" srcset="images/cards/chicken1000-mobile@1x.webp 1x, images/cards/chicken1000-mobile@2x.webp 2x">
+
               <source type="image/png" media="(min-width: 1440px)" width="169" height="210" srcset="images/cards/chicken1000-desktop@1x.png 1x, images/cards/chicken1000-desktop@2x.png 2x">
               <source type="image/png" media="(min-width: 768px)" width="200" height="210" srcset="images/cards/chicken1000-tablet@1x.png 1x, images/cards/chicken1000-tablet@2x.png 2x">
               <img class="main-card__img" width="140" height="107" src="images/cards/chicken1000-mobile@1x.png" srcset="images/cards/chicken1000-mobile@2x.png 2x" alt="">
@@ -113,6 +121,10 @@
           <a class="main-card__picture-link" href="#">
             <span class="visually-hidden">Перейти к карточке товара</span>
             <picture>
+              <source type="image/webp" media="(min-width: 1440px)" width="169" height="210" srcset="images/cards/fish500-desktop@1x.webp 1x, images/cards/fish500-desktop@2x.webp 2x">
+              <source type="image/webp" media="(min-width: 768px)" width="200" height="210" srcset="images/cards/fish500-tablet@1x.webp 1x, images/cards/fish500-tablet@2x.webp 2x">
+              <source type="image/webp" width="140" height="107" srcset="images/cards/fish500-mobile@1x.webp 1x, images/cards/fish500-mobile@2x.webp 2x">
+
               <source type="image/png" media="(min-width: 1440px)" width="169" height="210" srcset="images/cards/fish500-desktop@1x.png 1x, images/cards/fish500-desktop@2x.png 2x">
               <source type="image/png" media="(min-width: 768px)" width="200" height="210" srcset="images/cards/fish500-tablet@1x.png 1x, images/cards/fish500-tablet@2x.png 2x">
               <img class="main-card__img" width="140" height="107" src="images/cards/fish500-mobile@1x.png" srcset="images/cards/fish500-mobile@2x.png 2x" alt="">
@@ -142,6 +154,10 @@
           <a class="main-card__picture-link" href="#">
             <span class="visually-hidden">Перейти к карточке товара</span>
             <picture>
+              <source type="image/webp" media="(min-width: 1440px)" width="169" height="210" srcset="images/cards/fish1000-desktop@1x.webp 1x, images/cards/fish1000-desktop@2x.webp 2x">
+              <source type="image/webp" media="(min-width: 768px)" width="200" height="210" srcset="images/cards/fish1000-tablet@1x.webp 1x, images/cards/fish1000-tablet@2x.webp 2x">
+              <source type="image/webp" width="140" height="107" srcset="images/cards/fish1000-mobile@1x.webp 1x, images/cards/fish1000-mobile@2x.webp 2x">
+
               <source type="image/png" media="(min-width: 1440px)" width="169" height="210" srcset="images/cards/fish1000-desktop@1x.png 1x, images/cards/fish1000-desktop@2x.png 2x">
               <source type="image/png" media="(min-width: 768px)" width="200" height="210" srcset="images/cards/fish1000-tablet@1x.png 1x, images/cards/fish1000-tablet@2x.png 2x">
               <img class="main-card__img" width="140" height="107" src="images/cards/fish1000-mobile@1x.png" srcset="images/cards/fish1000-mobile@2x.png 2x" alt="">
@@ -171,6 +187,10 @@
           <a class="main-card__picture-link" href="#">
             <span class="visually-hidden">Перейти к карточке товара</span>
             <picture>
+              <source type="image/webp" media="(min-width: 1440px)" width="169" height="210" srcset="images/cards/buckwheat500-desktop@1x.webp 1x, images/cards/buckwheat500-desktop@2x.webp 2x">
+              <source type="image/webp" media="(min-width: 768px)" width="200" height="210" srcset="images/cards/buckwheat500-tablet@1x.webp 1x, images/cards/buckwheat500-tablet@2x.webp 2x">
+              <source type="image/webp" width="140" height="107" srcset="images/cards/buckwheat500-mobile@1x.webp 1x, images/cards/buckwheat500-mobile@2x.webp 2x">
+
               <source type="image/png" media="(min-width: 1440px)" width="169" height="210" srcset="images/cards/buckwheat500-desktop@1x.png 1x, images/cards/buckwheat500-desktop@2x.png 2x">
               <source type="image/png" media="(min-width: 768px)" width="200" height="210" srcset="images/cards/buckwheat500-tablet@1x.png 1x, images/cards/buckwheat500-tablet@2x.png 2x">
               <img class="main-card__img" width="140" height="107" src="images/cards/buckwheat500-mobile@1x.png" srcset="images/cards/buckwheat500-mobile@2x.png 2x" alt="">
@@ -200,6 +220,10 @@
           <a class="main-card__picture-link" href="#">
             <span class="visually-hidden">Перейти к карточке товара</span>
             <picture>
+              <source type="image/webp" media="(min-width: 1440px)" width="169" height="210" srcset="images/cards/buckwheat1000-desktop@1x.webp 1x, images/cards/buckwheat1000-desktop@2x.webp 2x">
+              <source type="image/webp" media="(min-width: 768px)" width="200" height="210" srcset="images/cards/buckwheat1000-tablet@1x.webp 1x, images/cards/buckwheat1000-tablet@2x.webp 2x">
+              <source type="image/webp" width="140" height="107" srcset="images/cards/buckwheat1000-mobile@1x.webp 1x, images/cards/buckwheat1000-mobile@2x.webp 2x">
+
               <source type="image/png" media="(min-width: 1440px)" width="169" height="210" srcset="images/cards/buckwheat1000-desktop@1x.png 1x, images/cards/buckwheat1000-desktop@2x.png 2x">
               <source type="image/png" media="(min-width: 768px)" width="200" height="210" srcset="images/cards/buckwheat1000-tablet@1x.png 1x, images/cards/buckwheat1000-tablet@2x.png 2x">
               <img class="main-card__img" width="140" height="107" src="images/cards/buckwheat1000-mobile@1x.png" srcset="images/cards/buckwheat1000-mobile@2x.png 2x" alt="">
@@ -229,6 +253,10 @@
           <a class="main-card__picture-link" href="#">
             <span class="visually-hidden">Перейти к карточке товара</span>
             <picture>
+              <source type="image/webp" media="(min-width: 1440px)" width="169" height="210" srcset="images/cards/rice500-desktop@1x.webp 1x, images/cards/rice500-desktop@2x.webp 2x">
+              <source type="image/webp" media="(min-width: 768px)" width="200" height="210" srcset="images/cards/rice500-tablet@1x.webp 1x, images/cards/rice500-tablet@2x.webp 2x">
+              <source type="image/webp" width="140" height="107" srcset="images/cards/rice500-mobile@1x.webp 1x, images/cards/rice500-mobile@2x.webp 2x">
+
               <source type="image/png" media="(min-width: 1440px)" width="169" height="210" srcset="images/cards/rice500-desktop@1x.png 1x, images/cards/rice500-desktop@2x.png 2x">
               <source type="image/png" media="(min-width: 768px)" width="200" height="210" srcset="images/cards/rice500-tablet@1x.png 1x, images/cards/rice500-tablet@2x.png 2x">
               <img class="main-card__img" width="140" height="107" src="images/cards/rice500-mobile@1x.png" srcset="images/cards/rice500-mobile@2x.png 2x" alt="">
